--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Franci's Website provides a great idea of what kind of services his skills can provide you. From Front-End to Back-End web apps to apps, to descentralized applications. Also he's a little box of surprises, check out what a human being is possible of.">
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-f.png" />
     <!--
